[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeflow-ts"
version = "0.1.0"
description = "One-stop time series preprocessing, plotting, benchmarking, and metric utilities for experimentation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TimeFlow TS Contributors" }]
keywords = ["time-series", "pandas", "scikit-learn", "preprocessing", "plotting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "matplotlib>=3.6",
  "scikit-learn>=1.2",
  "joblib>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
docs = [
  "mkdocs>=1.6",
  "mkdocstrings[python]>=0.26",
  "mkdocs-material>=9.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["timeflow_ts*"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false

